# spamoverflow

./: AI.md  README.md  db.tf  ecs.tf  ecs_celery_worker.tf  image.tf  lb.tf  local.sh  main.tf  refs.txt  sqs.tf
app/: Dockerfile  Dockerfile.celery  Dockerfile.dev  docker-compose.yml  endpoints.http  pyproject.toml
app/spamoverflow/: __init__.py  celery_app.py  tasks.py
app/spamoverflow/models/: email.py
app/spamoverflow/views/: routes.py
