[tool.poetry]
name = "spamoverflow-vietngyn"
version = "0.1.0"
description = ""
authors = ["Viet Nguyen <nghoangviet.english@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.2"
flask-sqlalchemy = "^3.1.1"
psycopg2 = "^2.9.9"
pendulum = "*"
gunicorn = "*"
celery = {extras = ["sqs"], version = "^5.4.0"}
redis = "^5.0.4"
boto3 = "^1.34.96"
scikit-learn = "^1.4.2"
botocore = "^1.34.98"
kombu = "^5.3.7"
boto = "^2.49.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"